# RoomSensor-Zephyr

./: .gitignore
app/: CMakeLists.txt  Kconfig  prj.conf
app/src/: batt.c  batt.h  bme280.c  bme280.h  bt_coded.c  main.c  pwr.c  pwr.h  ss_bt.c  ss_bt.h
boards/arm/bleroomsensor/: Kconfig  Kconfig.board  Kconfig.defconfig  bleroomsensor-pinctrl.dtsi  bleroomsensor.dts  bleroomsensor.yaml  bleroomsensor_defconfig
